<?xml version="1.0" encoding="utf-8"?>


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".view.ControlFragment"

        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="76dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingBottom="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp">
            <TextView
                android:id="@+id/chooseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_choose_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseText">

                <TextView
                    android:id="@+id/redText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_red"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/redSeekbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:theme="@style/red_seekbar"
                    android:thumbTint="#FF0000" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearRed">

                <TextView
                    android:id="@+id/greenText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_green"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/greenSeekbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:theme="@style/green_seekbar"
                    android:thumbTint="#00FF00" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearGreen">

                <TextView
                    android:id="@+id/blueText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/color_blue"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/blueSeekbar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:theme="@style/blue_seekbar"
                    android:thumbTint="#0000FF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/previewColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearBlue">

                <TextView
                    android:id="@+id/previewText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_preview_color"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/colorPreview"
                    android:layout_width="180dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="3"
                    android:background="#ffffff" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/circle_buttons"
                android:contentDescription="@string/app_name"
                android:src="@drawable/add_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/previewColor" />

            <TextView
                android:id="@+id/savedColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_saved_colors"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/savedColors"
                tools:listitem="@layout/recycler_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



